--- a/src/OnlineShop.Ui/Components/Layout/NavMenu.razor
+++ b/src/OnlineShop.Ui/Components/Layout/NavMenu.razor
@@ -15,10 +15,9 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="articles-list">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Articles
             </NavLink>
         </div>
     </nav>
 </div>
-
