Added login/logout functionality for client side. Fixed backend issues

--- a/src/OnlineShop.Ui/Components/Pages/ArticleDisplay.razor
+++ b/src/OnlineShop.Ui/Components/Pages/ArticleDisplay.razor
@@ -1,5 +1,5 @@
-﻿@using OnlineShop.Ui.Models
-
+﻿@using OnlineShop.Ui.Models.Articles;
+    
 <div class="row" id="@Article.Id">
     <div class="col-2 d-flex justify-content-start align-items-center p-1">
       <span>@Article.Name</span>
