--- a/src/OnlineShop.Ui/Components/Layout/MainLayout.razor
+++ b/src/OnlineShop.Ui/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using OnlineShop.Ui.Components.Pages
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
@@ -7,7 +8,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <LoginPartialView/>
         </div>
 
         <article class="content px-4">
