--- a/src/OnlineShop.Ui/_Imports.razor
+++ b/src/OnlineShop.Ui/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using OnlineShop.Ui
 @using OnlineShop.Ui.Components
+@using OnlineShop.Ui.Models.Articles
+@using OnlineShop.Ui.Abstractions.Interfaces
+@using OnlineShop.Ui.Models.Security
+@using OnlineShop.Ui.Models.Forms
+@using System.Linq
