--- a/src/OnlineShop.Ui/_Imports.razor
+++ b/src/OnlineShop.Ui/_Imports.razor
@@ -12,4 +12,5 @@
 @using OnlineShop.Ui.Abstractions.Interfaces
 @using OnlineShop.Ui.Models.Security
 @using OnlineShop.Ui.Models.Forms
+@using OnlineShop.Ui.States
 @using System.Linq
