Checkout page was added. OrdersManager was created

--- a/src/OnlineShop.Ui/Components/Layout/LoginPartialView.razor
+++ b/src/OnlineShop.Ui/Components/Layout/LoginPartialView.razor
@@ -10,7 +10,7 @@
     </div>
 
     <div>
-         <button id="login-form-logout-button" type="button" class="btn btn-primary mx-1" @onclick="LogOut">Logout</button> 
+         <button id="login-form-logout-button" type="button" class="btn btn-primary mx-1" @onclick="async _ => await LogOut()">Logout</button> 
     </div>
 }
 else
