--- a/src/OnlineShop.Ui/Components/Layout/NavMenu.razor
+++ b/src/OnlineShop.Ui/Components/Layout/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject ILoginStatusManager LoginStatusManager
+@rendermode RenderMode.InteractiveServer
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">OnlineShop.Ui</a>
     </div>
@@ -19,5 +22,22 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Articles
             </NavLink>
         </div>
+        @if (LoginStatusManager.LoginStatus.Token?.IsLoggedIn ?? false)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="checkout">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                    Checkout
+                </NavLink>
+            </div>
+        }
     </nav>
 </div>
+
+@code{
+    
+    protected override void OnInitialized()
+    {
+        LoginStatusManager.LoginStatusHasChanged += async (o, e) => await InvokeAsync(StateHasChanged);
+    }
+}
