--- a/src/OnlineShop.Ui/_Imports.razor
+++ b/src/OnlineShop.Ui/_Imports.razor
@@ -8,7 +8,11 @@
 @using Microsoft.JSInterop
 @using OnlineShop.Ui
 @using OnlineShop.Ui.Components
+@using OnlineShop.Ui.Components.Layout
 @using OnlineShop.Ui.Models.Articles
+@using OnlineShop.Ui.Models.Orders
+@using OnlineShop.Ui.Models.Common
+@using OnlineShop.Ui.Constants
 @using OnlineShop.Ui.Abstractions.Interfaces
 @using OnlineShop.Ui.Models.Security
 @using OnlineShop.Ui.Models.Forms
