NavMenu icons were moved to css styles. Added titles for all pages

--- a/src/OnlineShop.Ui/Components/Layout/MainLayout.razor
+++ b/src/OnlineShop.Ui/Components/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@using OnlineShop.Ui.Components.Pages
 @inherits LayoutComponentBase
 
+<PageTitle>Home</PageTitle>
 <div class="page">
     <div class="sidebar">
         <NavMenu />
