--- a/src/OnlineShop.Ui/Components/Pages/Checkout.razor
+++ b/src/OnlineShop.Ui/Components/Pages/Checkout.razor
@@ -4,6 +4,7 @@
 @inject IOrdersManager OrdersManager
 @rendermode RenderMode.InteractiveServer
 
+<PageTitle>Cart</PageTitle>
 <span>You have @CartState.Items.Count item(s) in your cart.</span>
 
 <br />
