--- a/src/OnlineShop.Ui/Components/Pages/OrdersList.razor
+++ b/src/OnlineShop.Ui/Components/Pages/OrdersList.razor
@@ -3,6 +3,7 @@
 @inject IOrdersManager OrdersManager
 @inject ILoginStatusManager LoginStatusManager
 
+<PageTitle>Orders</PageTitle>
 <div class="container mt-2">
     <div class="row">
         <div class="col-12 d-flex justify-content-center algin-items-center">
