--- a/src/OnlineShop.Ui/Components/Pages/ArticleDetails.razor
+++ b/src/OnlineShop.Ui/Components/Pages/ArticleDetails.razor
@@ -7,6 +7,7 @@
 @inject ILogger<ArticleDetails> Logger
 @rendermode RenderMode.InteractiveServer
 
+<PageTitle>Details</PageTitle>
 <div class="container mt-2">
     <div class="row">
         <div class="col-12 d-flex justify-content-center align-items-center">
